--- a/LCTMoodle/Views/GiaoTrinh/Tao.cshtml
+++ b/LCTMoodle/Views/GiaoTrinh/Tao.cshtml
@@ -27,45 +27,46 @@
         Soạn giáo trình
     </section>
     <section class="noi-dung">
-        <article id="khung_giao_trinh" class="lct-bang doc khung-giao-trinh">
-            <section class="nhom-cot">
-                <section class="cot cong-viec"></section>
-                <section class="cot mo-ta"></section>
-                <section class="cot thoi-gian"></section>
+        <article id="khung_giao_trinh" class="lct-bang khung-giao-trinh">
+            <section class="thead">
+                <article class="tr">
+                    <section class="th">Công việc</section>
+                    <section class="th">Mô tả</section>
+                    <section class="th">Thời gian</section>
+                </article>
             </section>
-            <section class="dong-tieu-de">
-                <section>Công việc</section>
-                <section>Mô tả</section>
-                <section>Thời gian</section>
-            </section>
-            @if (Model != null)
-            {
-                foreach (var item in Model)
+            <section class="tbody">                
+                @if (Model != null)
                 {
-                    @Html.Partial("~/Views/GiaoTrinh/_Item_Tao.cshtml", item)
+                    foreach (var item in Model)
+                    {
+                        @Html.Partial("~/Views/GiaoTrinh/_Item_Tao.cshtml", item)
+                    }
                 }
-            }
-            <form id="tao_giao_trinh_form" class="lct-form tao-giao-trinh-form">
-                <section>
-                    <input type="hidden" name="KhoaHoc" value="@khoaHoc.ma" />
-                    <article class="input">
-                        <input data-validate="bat-buoc" type="text" name="CongViec" placeholder="Công việc" />
-                    </article>
-                </section>
-                <section>
-                    <article class="input">
-                        <input data-validate="bat-buoc" type="text" name="MoTa" placeholder="Mô tả" />
-                    </article>
-                </section>
-                <section style="border-right: 0;">
-                    <article class="input">
-                        <input type="text" name="ThoiGian" placeholder="Thời gian" />
-                    </article>
-                </section>
-                <section class="lct-khung-button">
-                    <button type="submit" class="chap-nhan">
-                        Thêm
-                    </button>
+            </section>
+            <form id="tao_giao_trinh_form" class="lct-form tao-giao-trinh-form tfoot">
+                <section class="tr">
+                    <section class="td">
+                        <input type="hidden" name="KhoaHoc" value="@khoaHoc.ma" />
+                        <article class="input">
+                            <input data-validate="bat-buoc" type="text" name="CongViec" placeholder="Công việc" />
+                        </article>
+                    </section>
+                    <section class="td">
+                        <article class="input">
+                            <input data-validate="bat-buoc" type="text" name="MoTa" placeholder="Mô tả" />
+                        </article>
+                    </section>
+                    <section class="td">
+                        <article class="input">
+                            <input type="text" name="ThoiGian" placeholder="Thời gian" />
+                        </article>
+                        <section class="lct-khung-button">
+                            <button type="submit" class="chap-nhan">
+                                Thêm
+                            </button>
+                        </section>
+                    </section>
                 </section>
             </form>
         </article>
