--- a/LCTMoodle/Views/BaiTapNop/_DanhSachNop.cshtml
+++ b/LCTMoodle/Views/BaiTapNop/_DanhSachNop.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DTOLayer.BaiTapNopViewDTO>
+﻿@model List<DTOLayer.BaiTapNopDTO>
 
 <article class="hop hop-1-vien">
     <section class="tieu-de">
