--- a/LCTMoodle/Views/BaiVietBaiGiang/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiGiang/_Item.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.BaiVietBaiGiangViewDTO
+﻿@model DTOLayer.BaiVietBaiGiangDTO
 
 <li data-doi-tuong="muc-bai-viet" class="muc-bai-viet" data-ma=@Model.ma>
     <h2 class="tieu-de">
