--- a/LCTMoodle/Views/BaiVietBaiGiang/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiGiang/_Khung.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DTOLayer.BaiVietBaiGiangViewDTO>
+﻿@model List<DTOLayer.BaiVietBaiGiangDTO>
 
 <section class="hop hop-2-vien">
     <section class="tieu-de">
