--- a/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.BaiVietBaiTapViewDTO
+﻿@model DTOLayer.BaiVietBaiTapDTO
 
 <li data-doi-tuong="muc-bai-viet" class="muc-bai-viet" data-ma="@Model.ma">
     <section class="khung-bai-viet">
