--- a/LCTMoodle/Views/BaiVietDienDan/_Form.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Form.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.BaiVietDienDanViewDTO
+﻿@model DTOLayer.BaiVietDienDanDTO
 
 <form class="noi-dung lct-form" id="tao_bai_viet_form">
     <input type="hidden" name="KhoaHoc" value="@ViewData["MaKhoaHoc"]" />
