--- a/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.BaiVietDienDanViewDTO
+﻿@model DTOLayer.BaiVietDienDanDTO
 
 <li data-doi-tuong="muc-bai-viet" class="muc-bai-viet" data-ma=@Model.ma>
     <section class="khung-bai-viet">
