--- a/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DTOLayer.BaiVietDienDanViewDTO>
+﻿@model List<DTOLayer.BaiVietDienDanDTO>
 
 <section class="hop hop-2-vien">
     <section class="tieu-de">
