--- a/LCTMoodle/Views/BinhLuan/_Item.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Item.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.BinhLuanViewDTO
+﻿@model DTOLayer.BinhLuanDTO
 
 <li data-doi-tuong="muc-binh-luan" class="muc-binh-luan" data-loai-doi-tuong="@Model.loaiDoiTuong">
     <section class="trai">
