--- a/LCTMoodle/Views/ChuDe/Khung/_DanhSach_Item.cshtml
+++ b/LCTMoodle/Views/ChuDe/Khung/_DanhSach_Item.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.ChuDeViewDTO
+﻿@model DTOLayer.ChuDeDTO
 
 <li data-doi-tuong="muc" data-loai="ds-nut" data-ma="@Model.ma">
     <section class="mo-ta">
