--- a/LCTMoodle/Views/HoiDap/Index.cshtml
+++ b/LCTMoodle/Views/HoiDap/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DTOLayer.CauHoiViewDTO>
+﻿@model List<DTOLayer.CauHoiDTO>
 @{
     ViewData["Title"] = "Hỏi đáp";
     Layout = "~/Views/LCT/Khung.cshtml";
