--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.KhoaHocViewDTO
+﻿@model DTOLayer.KhoaHocDTO
 @{
     ViewData["TieuDe"] = Model.ten;
     Layout = "~/Views/LCT/Khung.cshtml";
