--- a/LCTMoodle/Views/NguoiDung/Index.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.NguoiDungViewDTO
+﻿@model DTOLayer.NguoiDungDTO
 @{
     ViewData["Title"] = "Người Dùng";
     Layout = "~/Views/LCT/Khung.cshtml";   
