--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -25,6 +25,18 @@
                 <li>
                     <section class="tieu-de">
                         <label>
+                            Thời gian + lịch
+                        </label>
+                    </section>
+                    <section class="noi-dung">
+                        <article class="input">
+                            <input data-input-type="lct-thoi-gian-lich" name="name" value="" data-thoi-gian-mac-dinh="00:00" data-lich-mac-dinh="20/12/2014" data-thoi-gian-placeholder="Chọn thời gian" data-lich-placeholder="Chọn ngày" />
+                        </article>
+                    </section>
+                </li>
+                <li>
+                    <section class="tieu-de">
+                        <label>
                             Gợi ý
                         </label>
                     </section>
