--- a/LCTMoodle/Views/BaiVietBaiTap/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Khung.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DTOLayer.BaiVietBaiTapViewDTO>
+﻿@model List<DTOLayer.BaiVietBaiTapDTO>
 
 <section class="hop hop-2-vien">
     <section class="tieu-de">
