--- a/LCTMoodle/Views/ChuDe/Khung/_Cay_Con_PhamVi_Item.cshtml
+++ b/LCTMoodle/Views/ChuDe/Khung/_Cay_Con_PhamVi_Item.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.ChuDeViewDTO
+﻿@model DTOLayer.ChuDeDTO
 
 <li data-doi-tuong="muc" data-loai="cay-con-nut" data-ma="@Model.ma">
     <a data-chuc-nang="mo-nut">
