--- a/LCTMoodle/Views/ChuDe/Khung/_Cay_PhamVi_Item.cshtml
+++ b/LCTMoodle/Views/ChuDe/Khung/_Cay_PhamVi_Item.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DTOLayer.ChuDeViewDTO>
+﻿@model List<DTOLayer.ChuDeDTO>
 @*
     ViewData: 
         Ma: Mã của phạm vi
@@ -12,7 +12,7 @@
     <ul data-doi-tuong="danh-sach-muc" class="nut-con">
         @if (Model != null)
         {
-            foreach (DTOLayer.ChuDeViewDTO chuDe in Model)
+            foreach (DTOLayer.ChuDeDTO chuDe in Model)
             {
                 @Html.Partial("~/Views/ChuDe/Khung/_Cay_Con_PhamVi_Item.cshtml", chuDe)
             }
