--- a/LCTMoodle/Views/ChuDe/_Chon.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Chon.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.ChuDeViewDTO
+﻿@model DTOLayer.ChuDeDTO
 
 @{
 }
@@ -10,7 +10,7 @@
     <section id="khung_quan_ly" class="noi-dung lct-cay" data-ma="@(Model != null ? Model.ma : 0)" data-pham-vi="@ViewData["PhamVi"]">
         <section class="cay">
             <ul id="khung_cay" class="nut">
-                @helper hienThiCay(DTOLayer.ChuDeViewDTO chuDe)
+                @helper hienThiCay(DTOLayer.ChuDeDTO chuDe)
                 {
                     if (chuDe == null)
                     {
@@ -46,16 +46,16 @@
                     Data.PhamVi phamVi = Data.PhamVi.lay(ViewData["PhamVi"].ToString());
 
                     var ketQua = DAOLayer.ChuDeDAO.layTheoMaChuDeCha(phamVi.ma, 0);
-                    List<DTOLayer.ChuDeViewDTO> danhSachChuDeCon = ketQua.trangThai == 0 ? ketQua.ketQua as List<DTOLayer.ChuDeViewDTO> : new List<DTOLayer.ChuDeViewDTO>(); 
-                    
-                    foreach (DTOLayer.ChuDeViewDTO chuDe in danhSachChuDeCon)
+                    List<DTOLayer.ChuDeDTO> danhSachChuDeCon = ketQua.trangThai == 0 ? ketQua.ketQua as List<DTOLayer.ChuDeDTO> : new List<DTOLayer.ChuDeDTO>();
+
+                    foreach (DTOLayer.ChuDeDTO chuDe in danhSachChuDeCon)
                     {
                         @Html.Partial("~/Views/ChuDe/Khung/_DanhSach_Item.cshtml", chuDe)
                     }   
                 }
                 else
                 {
-                    foreach (DTOLayer.ChuDeViewDTO chuDe in Model.danhSachChuDeCon)
+                    foreach (DTOLayer.ChuDeDTO chuDe in Model.danhSachChuDeCon)
                     {
                         @Html.Partial("~/Views/ChuDe/Khung/_DanhSach_Item.cshtml", chuDe)
                     }        
