--- a/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
@@ -1,4 +1,4 @@
-﻿@model DTOLayer.CauHoiViewDTO
+﻿@model DTOLayer.CauHoiDTO
 @{
     ViewData["Title"] = Model.tieuDe;
     Layout = "~/Views/LCT/Khung.cshtml";
