--- a/LCTMoodle/Content/styles/GiaoTrinh/Tao.css
+++ b/LCTMoodle/Content/styles/GiaoTrinh/Tao.css
@@ -19,7 +19,7 @@
         display: table-footer-group;
     }
 
-    .khung-giao-trinh .tao-giao-trinh-form .lct-khung-button {
+    .khung-giao-trinh .tao-giao-trinh-form .khung-button {
         padding: 0;
         position: absolute;
         top: 100%;
