--- a/LCTMoodle/Views/BaiVietBaiGiang/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiGiang/_Khung.cshtml
@@ -30,7 +30,7 @@
                     </section>
                 </li>
             </ul>
-            <section data-an class="lct-khung-button">
+            <section data-an class="khung-button">
                 <button type="submit" class="chap-nhan">
                     Đăng
                 </button>
