--- a/LCTMoodle/Views/ChuDe/_Form.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Form.cshtml
@@ -43,7 +43,7 @@
                 </section>
             </li>
         </ul>
-        <section class="lct-khung-button">
+        <section class="khung-button">
             <button type="submit" class="chap-nhan">
                 Tạo
             </button>
