--- a/LCTMoodle/Views/GiaoTrinh/Tao.cshtml
+++ b/LCTMoodle/Views/GiaoTrinh/Tao.cshtml
@@ -61,7 +61,7 @@
                         <article class="input">
                             <input type="text" name="ThoiGian" placeholder="Thời gian" />
                         </article>
-                        <section class="lct-khung-button">
+                        <section class="khung-button">
                             <button type="submit" class="chap-nhan">
                                 Thêm
                             </button>
