--- a/LCTMoodle/Views/HoiDap/TaoCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/TaoCauHoi.cshtml
@@ -45,7 +45,7 @@
                         </section>
                     </li>
                 </ul>
-                <section class="lct-khung-button">
+                <section class="khung-button">
                     <button type="submit" class="chap-nhan">Tạo câu hỏi</button>
                 </section>
             </article>
