--- a/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
@@ -88,7 +88,7 @@
                                 </section>
                             </li>
                         </ul>
-                        <section class="lct-khung-button">
+                        <section class="khung-button">
                             <button class="chap-nhan">Trả lời</button>
                         </section>
                     </article>
