--- a/LCTMoodle/Views/KhoaHoc/Tao.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Tao.cshtml
@@ -98,7 +98,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" data-input-type="lct-thoi-gian-lich" name="ThoiDiemHetHan" data-thoi-gian-placeholder="Giờ" data-lich-placeholder="Ngày" />
+                            <input data-validate="bat-buoc" data-input-type="thoi-gian-lich" name="ThoiDiemHetHan" data-thoi-gian-placeholder="Giờ" data-lich-placeholder="Ngày" />
                         </article>
                     </section>
                 </li>
@@ -123,7 +123,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" data-input-type="lct-thoi-gian-lich" name="HanDangKy" data-thoi-gian-placeholder="Giờ" data-lich-placeholder="Ngày" />
+                            <input data-validate="bat-buoc" data-input-type="thoi-gian-lich" name="HanDangKy" data-thoi-gian-placeholder="Giờ" data-lich-placeholder="Ngày" />
                         </article>
                     </section>
                 </li>
@@ -157,7 +157,7 @@
                     </section>
                 </li>
             </ul>
-            <section class="lct-khung-button">
+            <section class="khung-button">
                 <button type="submit" class="chap-nhan">
                     Tạo khóa học
                 </button>
