--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -74,7 +74,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input data-input-type="lct-lich" name="NgaySinh" value="" data-validate="bat-buoc" />
+                                <input data-input-type="lich" name="NgaySinh" value="" data-validate="bat-buoc" />
                             </article>
                         </section>
                     </li>
@@ -119,7 +119,7 @@
                         </section>
                     </li>                    
                 </ul>
-                <section class="lct-khung-button">
+                <section class="khung-button">
                     <button type="submit" class="chap-nhan">
                         Đăng Ký
                     </button>
