--- a/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
@@ -57,7 +57,7 @@
                         </section>
                     </li>                    
                 </ul>
-                <section class="lct-khung-button">
+                <section class="khung-button">
                     <button class="chap-nhan">
                         Đăng nhập
                     </button>
