--- a/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
@@ -26,7 +26,7 @@
 
 <article class="hop hop-1-vien">
     <section class="noi-dung">
-        <article class="cau-hoi">
+        <article class="item-hoi-dap">
             <section class="thong-tin">
                 <div class="nguoi-dung">
                     <div class="hinh-dai-dien">
@@ -34,9 +34,9 @@
                     </div>
                     <span>@Model.nguoiTao.tenTaiKhoan</span>
                 </div>
-                <div class="cau-hoi">
+                <div class="diem-so">
                     <i class="pe-7s-angle-up"></i>
-                    <span class="diem-so">5</span>
+                    <span class="so">5</span>
                     <i class="pe-7s-angle-down"></i>
                 </div>
                 <div class="thoi-gian">@Model.thoiDiemTao</div>
@@ -45,9 +45,6 @@
                 <div class="tieu-de">@Model.tieuDe</div>
                 <div class="noi-dung">
                     @Html.Raw(Model.noiDung)
-                </div>
-                <div class="nut-tra-loi">
-                    <a href="#tra_loi_cau_hoi">Trả lời câu hỏi này</a>
                 </div>
             </section>
         </article>
